# jterm3

./: Cargo.toml  README.md
.github/workflows/: apply-ui-ux-polish.yml  ci.yml
src/: char_width.rs  color.rs  command_palette.rs  config.rs  debug.rs  keybindings.rs  kitty_graphics.rs  link.rs  main.rs  pty.rs  scripting.rs  search.rs  search_replace.rs  session_persistence.rs  sidebar.rs  terminal.rs  terminal_view.rs  theme.rs
