[package]
name = "jterm3"
version = "0.1.0"
edition = "2021"
description = "A terminal emulator built with iced, a functional reimplementation of jterm2"

[dependencies]
iced = { version = "0.14", features = ["canvas", "tokio", "advanced", "image", "wgpu"] }
libc = "0.2"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
smallvec = "1.15"
base64 = "0.22"
image = "0.25"
once_cell = "1.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"
dirs = "6.0"
unicode-width = "0.2"
unicode-normalization = "0.1"
lru = "0.17"
regex = "1.12"
fuzzy-matcher = "0.3"
uuid = { version = "1.23", features = ["v4", "serde"] }

[profile.dev]
incremental = true

[profile.dev.package."*"]
opt-level = 1

# [profile.release]
# lto = "thin"
# strip = true
# codegen-units = 1
# opt-level = 3
